@@ -2,10 +2,11 @@ package com.gr.hua.dit.project2025.StreetFoodGo.security;
 
 import com.gr.hua.dit.project2025.StreetFoodGo.core.model.Person;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class PersonDetails implements UserDetails {
 
@@ -15,9 +16,15 @@ public class PersonDetails implements UserDetails {
         this.person = person;
     }
 
+    public Person getPerson() {
+        return person;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_" + person.getType().name())
+        );
     }
 
     @Override
@@ -27,7 +34,8 @@ public class PersonDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        return person.getEmailAddress();   // LOGIN BY EMAIL
+        // Αν login γίνεται με email, μπορείς να επιστρέψεις emailAddress
+        return person.getEmailAddress();
     }
 
     @Override public boolean isAccountNonExpired() { return true; }
